[package]
name = "tetrapack"
description = "Various small add-ons for the tetra game engine"
version = "0.3.0"
repository = "https://github.com/puppetmaster-/tetrapack"
authors = ["puppetmaster <github@puppetmaster.ch>"]
license = "MIT"
readme = "README.md"
edition = '2018'
required-features = ["default"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.serde_derive]
version = "1.0"

[dependencies.serde-xml-rs]
version = "0.4.0"

[dependencies.rand]
version = "0.7.3"

[dependencies.rand_core]
version = "0.5.1"

[dependencies.tetra]
features = ["serde_support"]
# -- GIT --
git = "https://github.com/17cupsofcoffee/tetra"
branch = "main"
# -- cargo.io --
#version = "0.4.2"
# -- local --
#path = "../tetra"

[dependencies.bytemuck]
version = "1.4.0"

[dependencies.keyframe]
version = "1.0.2"

[dependencies.keyframe_derive]
version = "1.0.0"

[dependencies.log]
version = "0.4"
features = ["max_level_debug", "release_max_level_warn"]

[dependencies.ron]
version = "0.6.0"